@@ -1,3 +1,8 @@
+2013-04-29 Philipp Klaus Krause <pkk AT spth.de>
+
+	* src/stm8/gen.c:
+	  STM8: Implement read from signed bit-field.
+
 2013-04-28 Philipp Klaus Krause <pkk AT spth.de>
 
 	* sdas/asxxsrc/asout.c,
